RESOLVED FIXED288707
[Cocoa] Unable to use system appearance features in stylesheets inside UA shadow roots
https://bugs.webkit.org/show_bug.cgi?id=288707
Summary [Cocoa] Unable to use system appearance features in stylesheets inside UA sha...
Aditya Keerthi
Reported 2025-02-27 00:33:02 PST
Attachments
Aditya Keerthi
Comment 1 2025-02-27 00:47:42 PST
EWS
Comment 2 2025-02-27 14:35:41 PST
Committed 291260@main (901adf26e0db): <https://commits.webkit.org/291260@main> Reviewed commits have been landed. Closing PR #41502 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.